--- a/index.html
+++ b/index.html
@@ -28,31 +28,43 @@
     <main class="content">
         <div class="About-Me" id="About-Me">
             <h2>About Me</h2>
-            <section id = "Family-Pictures">
-                <img src=".\images\Me.jpg" alt="Picture Of Me Your Developer">
-                <img src=".\images\Ronan1.JPG" alt="Picture of My Son Ronan">
+            <span id = "Family-Pictures">
+                <img src=".\images\Me.jpg"  alt="Picture Of Me Your Developer">
                 <img src=".\images\Meghan.JPG" alt="Picture of My Girlfriend Meghan and Son Ronan">
                 <img src=".\images\Casper.JPG" alt="Picture of My Dog Casper">
-            </section>
-            <section>
+            </span>
+            <section id="Paragraph">
                 <p> Hi, My name is Lucas and I am in the process of taking a 12 week coding bootcamp through the University of Minnesota Twin Cities.  I graduated HighSchool from New London-Spicer 
-                Minnesota in 2006.  I currently live in Hutchinson MN with my Girlfriend Meghan Doll and 11 month old son Ronan Lippert.  We have two cats
+                Minnesota in 2006.  I currently live in Hutchinson MN with my Girlfriend Meghan Doll and one year old son Ronan Lippert.  We have two cats
                 and a dog. The dog's name is Casper and he is an English cream golden retriever which makes him an all white golden retriever.  I prefer this breed over the american golden retriever 
                 because he is much less energetic but still keeps that great golden retriever attitude and demeanor.  The two cats names are Oscar and Sunny, they are both Orange Tabbies.  Ronan
-                continues to be a focal point in our lives and brings much joy. Below you can see pictures of Ronan, Meghan, and Casper.
+                continues to be a focal point in our lives and brings much joy. Below you can see pictures of Ronan, Meghan, and Casper.  In my free time I like to fish, golf, and spend time with my 
+                family.
                 </p>
             </section>
         </div>
         <div class ="My-Work" id="My-Work">
             <h2>My Work</h2>
-                    <img class ="hero" src=".\images\Horiseon.screenshot.png" alt="screenshot of website I did semantic tags for"> 
-                        <h3>This is a screenshot of a website I converted to use only semantic tags instead of div tags.</h3>
-                    <img class = "moondogs" src=".\images\moondogs.jpg" alt="picture of moondogs">
-                    <img class ="sundogs" src=".\images\sundogs.jpg" alt="picture of sundogs">
-                    <img class = "mountain" src=".\images\snowy mountain.jpg" alt="picture of snowy mountain top">
-            <p> Not alot to show here as I have only done one website.</p>
+                <table>
+                    <a href="https://lippertnegenl.github.io/Switching-from-Div-to-Semantic-tags/"><img class ="hero"src=".\images\Horiseon.screenshot.png" alt="screenshot of website I did semantic tags for">
+                    <p> This is an example of a website that I switched the html from using semantic tags to html tags.  Click on the image to see a version of the live website.</p>
+                </table>
         </div>   
     </main>
 </body>
-
+<footer class ="Contact-Info" id ="Contact-Info">
+    <h3>
+        <ul>
+            <li>
+                <a> Phone = 555-555-5555</a>
+            </li>
+            <li>
+                <a> Email = Timbuktu@gmail.com</a>
+            </li>
+            <li>
+                <a>  Address = Timbuktu </a>
+            </li>
+        </ul>
+    </h3>
+</footer>
 </html>
